--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,16 @@
 <resources
    xmlns:android="http://schemas.android.com/apk/res/android">
 
+   <string-array name="entries_languages">
+      <item>Deutsch</item>
+      <item>Englisch</item>
+   </string-array>
+
+   <string-array name="entryvalues_languages">
+      <item>Deutsch</item>
+      <item>Englisch</item>
+   </string-array>
+
    <string-array
       name="state_choices">
       <item>Active</item>
