--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,5 +5,6 @@
     <color name="ColorSecondary">#ff6347</color>
     <color name="ColorGreen">#99CC00</color>
     <color name="ColorGrey">#cccccc</color>
+    <color name="ColorLightGrey">#f5f5f5</color>
     <color name="smoked_glass">#aaffffff</color>
 </resources>
