--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -11,6 +11,12 @@
       <item>Englisch</item>
    </string-array>
 
+   <string-array name="env_choices">
+      <item>local</item>
+      <item>ref</item>
+      <item>prod</item>
+   </string-array>
+
    <string-array
       name="state_choices">
       <item>Active</item>
